stylesheet.css
/* this stylesheet is going to be the basic style */

html {
    background: aqua;
}

h1 {
    text-align: center;
}

#fullheader {
    background-color: blue;
    margin-top: 0;
}

#wrapper {
    clear: both;
}
nav a:visited {
    color: cyan;
}

nav {
    border: 1px green solid;
    color: cyan;
    display: flex;
    align-items: center;
    justify-content: space-around;
    /* also need to change the text color to make it more readable */
    font-size: 20px;
    width: 100%;
    /* this is also going to need to fold into a hamburger stack
    once it gets small enough */
}
#posterContainer {
    margin: auto;
    width: 70%;
    height: 50%;
}

#moviePoster {
    margin: auto auto 30px auto;
    width: 90%;
}

#posterContainer {
    display: flex;
    align-items: center;
}

#characters {
    margin-top: 10px;
}


#copyright {
    text-align: center;
}

aside {
    margin: auto;
}

@media (max-width: 760px) {
    body {
        margin: auto;
        width: 70%;
    }
    #characters {
        text-align: center;
    }
    #characters img {
        width: 50%;
        height: 50%;
    }
    #stages details {
        text-align: center;
    }
    #twitterContainer {
        text-align: center;
    }
}

@media (min-width: 760px) {
    #mainInfo {
        margin-left: 20px;
    }
    #characters img {
        width: 25%;
        height: 25%;
    }

    #stages figure{
        width: 25%;
        height: 25%;
        display: inline-block;
    }
    #twitterContainer {
        text-align: center;
    }

}

